ui design and some functionality is updated

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
             <h1 class="minutes">00</h1>
             <h1 class="seconds">00</h1>
         </div>
-
+        
         <div class="btns">
+            <div class="realTime"><p id="realtime">00</p></div>
             <button id="start-button">Start</button>
             <button id="stop-button">Stop</button>
             <button id="reset-button">Reset</button>
